...
      Row(22, 21, 5, "ListItem", "WLAN", 40, 578, 1000, 136, interactive: true),
      Row(31, 22, 6, "Row", "WLAN", 62, 590, 956, 112, interactive: true),
      Row(32, 31, 7, "Image", "wifi", 86, 614, 64, 64),
      Row(38, 31, 7, "Text", "WLAN", 186, 622, 102, 48),
      Row(40, 31, 7, "Row", "已连接", 640, 600, 356, 92, interactive: true),
      Row(41, 40, 8, "Text", "已连接", 724, 622, 82, 48),
      Row(42, 40, 8, "Toggle", "WLAN", 886, 614, 110, 64, interactive: true, inspectorID: "wifi_switch"),
    ]
    let items: [(Int, Int, Int, String, String)] = [
      (50, 52, 53, "蓝牙", "bluetooth"),
      (58, 59, 60, "移动网络", "cellular"),
      (66, 67, 68, "超级终端", "superDevice"),
      (74, 75, 76, "更多连接", "moreConnections"),
...
